| Summary: | ASTERISK-28769: DTLS Handshake Fails to Occur if ice_support is enabled but not used | ||
| Reporter: | Torrey Searle (tsearle) | Labels: | |
| Date Opened: | 2020-03-05 02:54:09.000-0600 | Date Closed: | 2020-03-10 13:37:45 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 13.28.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | if ice_support and dtls is enabled on an endpoint, but the endpoint receives a call requesting DTLS but has no candidates, asterisk still waits for ice to complete (which will never happen) instead of directly initiating the DTLS handshake.
This results in the call having no audio as no RTP is sent or received. This can be viewed as an improvement upon ASTERISK-27957 | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-03-05 02:54:10.316-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-03-10 13:37:46.047-0500 Change 13856 merged by George Joseph: res_pjsip_sdp_rtp: Don't wait for ICE if not negotiated [https://gerrit.asterisk.org/c/asterisk/+/13856|https://gerrit.asterisk.org/c/asterisk/+/13856] By: Friendly Automation (friendly-automation) 2020-03-10 13:38:06.422-0500 Change 13885 merged by George Joseph: res_pjsip_sdp_rtp: Don't wait for ICE if not negotiated [https://gerrit.asterisk.org/c/asterisk/+/13885|https://gerrit.asterisk.org/c/asterisk/+/13885] By: Friendly Automation (friendly-automation) 2020-03-10 13:38:27.301-0500 Change 13857 merged by George Joseph: res_pjsip_sdp_rtp: Don't wait for ICE if not negotiated [https://gerrit.asterisk.org/c/asterisk/+/13857|https://gerrit.asterisk.org/c/asterisk/+/13857] By: Friendly Automation (friendly-automation) 2020-03-10 13:38:43.842-0500 Change 13886 merged by George Joseph: res_pjsip_sdp_rtp: Don't wait for ICE if not negotiated [https://gerrit.asterisk.org/c/asterisk/+/13886|https://gerrit.asterisk.org/c/asterisk/+/13886] | ||